Réorganiser la structure du header et améliorer le style du menu de navigation

--- a/pratique.html
+++ b/pratique.html
@@ -16,21 +16,23 @@
             <div class="logo">
                 <img src="https://via.placeholder.com/150x50?text=LOGO" alt="Logo Anaïs Clochard Jagot">
             </div>
-            <nav class="main-nav">
-                <button class="hamburger" aria-label="Ouvrir le menu de navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="nav-links">
-                    <ul>
-                        <li><a href="index.html">Accueil</a></li>
-                        <li><a href="accompagnements.html">Accompagnements</a></li>
-                        <li><a href="qui-suis-je.html">Qui suis-je ?</a></li>
-                        <li><a href="pratique.html" class="active-link">Pratique</a></li>
-                        <li class="btn-rdv-mobile"><a href="#">Prendre RDV</a></li>
-                    </ul>
-                </div>
-            </nav>
-            <a href="#" class="btn-rdv">Prendre RDV</a>
+            <div class="header-right">
+                <nav class="main-nav">
+                    <button class="hamburger" aria-label="Ouvrir le menu de navigation">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                    <div class="nav-links">
+                        <ul>
+                            <li><a href="index.html">Accueil</a></li>
+                            <li><a href="accompagnements.html">Accompagnements</a></li>
+                            <li><a href="qui-suis-je.html">Qui suis-je ?</a></li>
+                            <li><a href="pratique.html" class="active-link">Pratique</a></li>
+                            <li class="btn-rdv-mobile"><a href="#">Prendre RDV</a></li>
+                        </ul>
+                    </div>
+                </nav>
+                <a href="#" class="btn-rdv">Prendre RDV</a>
+            </div>
         </div>
     </header>
 
