Mettre à jour le lien "Prendre RDV" vers Doctolib et remplacer l'image de profil dans les pages accompagnements, index, pratique et qui-suis-je

--- a/accompagnements.html
+++ b/accompagnements.html
@@ -31,7 +31,7 @@
                         </ul>
                     </div>
                 </nav>
-                <a href="#" class="btn-rdv">Prendre RDV</a>
+                <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot" class="btn-rdv">Prendre RDV</a>
             </div>
         </div>
     </header>
