--- a/qui-suis-je.html
+++ b/qui-suis-je.html
@@ -31,7 +31,7 @@
                         </ul>
                     </div>
                 </nav>
-                <a href="#" class="btn-rdv">Prendre RDV</a>
+                <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot" class="btn-rdv">Prendre RDV</a>
             </div>
         </div>
     </header>
@@ -40,7 +40,7 @@
         <section class="about-section">
             <div class="section-container">
                 <div class="about-image">
-                    <img src="https://via.placeholder.com/400x400?text=Photo+de+profil" alt="Anaïs Clochard Jagot">
+                    <img src="images/anais-photo.png" alt="Anaïs Clochard Jagot">
                 </div>
                 <div class="about-text">
                     <p>Je suis psychologue clinicienne et psychothérapeute ayant à cœur d’accompagner chacun.e à
