--- a/pratique.html
+++ b/pratique.html
@@ -31,7 +31,7 @@
                         </ul>
                     </div>
                 </nav>
-                <a href="#" class="btn-rdv">Prendre RDV</a>
+                <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot" class="btn-rdv">Prendre RDV</a>
             </div>
         </div>
     </header>
