--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="site-header">
         <div class="header-container">
             <div class="logo">
-                <img src="https://via.placeholder.com/150x50?text=LOGO" alt="Logo Anaïs Clochard Jagot">
+                <img src="images/logo.jpg" alt="Logo Anaïs Clochard Jagot">
             </div>
             <div class="header-right">
                 <nav class="main-nav">
