Refactor code structure for improved readability and maintainability

--- a/accompagnements.html
+++ b/accompagnements.html
@@ -14,7 +14,7 @@
     <header class="site-header">
         <div class="header-container">
             <div class="logo">
-                <img src="https://via.placeholder.com/150x50?text=LOGO" alt="Logo Anaïs Clochard Jagot">
+                <img src="images/logo.jpg" alt="Logo Anaïs Clochard Jagot">
             </div>
             <div class="header-right">
                 <nav class="main-nav">
@@ -66,7 +66,7 @@
                         </ul>
                     </div>
                     <div class="image-block">
-                        <img src="https://via.placeholder.com/500x500?text=Consultation" alt="Photo d'une consultation">
+                        <img src="images/cabinet-physio-grandet.png" alt="Photo d'une consultation">
                     </div>
                 </div>
 
