--- a/pratique.html
+++ b/pratique.html
@@ -14,7 +14,7 @@
     <header class="site-header">
         <div class="header-container">
             <div class="logo">
-                <img src="https://via.placeholder.com/150x50?text=LOGO" alt="Logo Anaïs Clochard Jagot">
+                <img src="images/logo.jpg" alt="Logo Anaïs Clochard Jagot">
             </div>
             <div class="header-right">
                 <nav class="main-nav">
@@ -42,7 +42,7 @@
                 <div class="map-and-prices">
                     <div class="map-section">
                         <h2>Accès au cabinet</h2>
-                        <img src="https://via.placeholder.com/500x350?text=Carte+du+cabinet"
+                        <img src="images/google-map-adresse.png"
                             alt="Carte de localisation du cabinet">
                         <h3>Transports en commun :</h3>
                         <ul>
@@ -76,7 +76,7 @@
                         <p>Étage avec ascenseur, accès PMR</p>
                     </div>
                     <div class="building-photo">
-                        <img src="https://via.placeholder.com/500x350?text=Photo+du+batiment"
+                        <img src="images/batiment-photo.png"
                             alt="Photo du bâtiment du cabinet">
                     </div>
                 </div>
