--- a/qui-suis-je.html
+++ b/qui-suis-je.html
@@ -14,7 +14,7 @@
     <header class="site-header">
         <div class="header-container">
             <div class="logo">
-                <img src="images/anais-photo.png" alt="Logo Anaïs Clochard Jagot">
+                <img src="images/logo.jpg" alt="Logo Anaïs Clochard Jagot">
             </div>
             <div class="header-right">
                 <nav class="main-nav">
