Refactor code structure for improved readability and maintainability

--- a/accompagnements.html
+++ b/accompagnements.html
@@ -66,7 +66,7 @@
                         </ul>
                     </div>
                     <div class="image-block">
-                        <img src="images/cabinet-physio-grandet.png" alt="Photo d'une consultation">
+                        <img src="images/entree-cabinet.jpg" alt="Photo d'une consultation">
                     </div>
                 </div>
 
@@ -88,7 +88,7 @@
                             bienveillant, afin de vous permettre d'exprimer vos émotions et vos pensées librement.</p>
                     </div>
                     <div class="image-block">
-                        <img src="https://via.placeholder.com/500x500?text=Séance"
+                        <img src="images/salle-attente.jpg"
                             alt="Photo d'une séance de psychothérapie">
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                             rythme, dans le respect et la bienveillance.</p>
                     </div>
                     <div class="image-block">
-                        <img src="https://via.placeholder.com/500x500?text=Mon+approche"
+                        <img src="images/salle-attente 3 .jpg"
                             alt="Photo illustrant l'approche">
                     </div>
                 </div>
