--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         réduite ou dans l'impossibilité de se déplacer (période pré et postnatale).</p>
                 </div>
                 <div class="image-content">
-                    <img src="https://via.placeholder.com/500x350?text=Photo+du+cabinet"
+                    <img src="images/entree-cabinet.jpg"
                         alt="Photo du cabinet de psychologie">
                 </div>
             </div>
