--- a/pratique.html
+++ b/pratique.html
@@ -42,7 +42,7 @@
                 <div class="map-and-prices">
                     <div class="map-section">
                         <h2>Accès au cabinet</h2>
-                        <img src="images/google-map-adresse.png"
+                        <img src="images/map-parkings.jpg"
                             alt="Carte de localisation du cabinet">
                         <h3>Transports en commun :</h3>
                         <ul>
@@ -76,7 +76,7 @@
                         <p>Étage avec ascenseur, accès PMR</p>
                     </div>
                     <div class="building-photo">
-                        <img src="images/batiment-photo.png"
+                        <img src="images/rue-grandet.jpg"
                             alt="Photo du bâtiment du cabinet">
                     </div>
                 </div>
