--- a/qui-suis-je.html
+++ b/qui-suis-je.html
@@ -40,7 +40,7 @@
         <section class="about-section">
             <div class="section-container">
                 <div class="about-image">
-                    <img src="images/anais-photo.png" alt="Anaïs Clochard Jagot">
+                    <img src="images/portrait.jpg" alt="Anaïs Clochard Jagot">
                 </div>
                 <div class="about-text">
                     <p>Je suis psychologue clinicienne et psychothérapeute ayant à cœur d’accompagner chacun.e à
