Mettre à jour le logo en remplaçant "logo.jpg" par "logo.png" dans les fichiers accompagnements.html, pratique.html et qui-suis-je.html

--- a/accompagnements.html
+++ b/accompagnements.html
@@ -14,7 +14,7 @@
     <header class="site-header">
         <div class="header-container">
             <div class="logo">
-                <img src="images/logo.jpg" alt="Logo Anaïs Clochard Jagot">
+                <img src="images/logo.png" alt="Logo Anaïs Clochard Jagot">
             </div>
             <div class="header-right">
                 <nav class="main-nav">
@@ -85,7 +85,8 @@
                             limitantes. L’idée est de retrouver votre confiance en vous et de vous sentir plus apaisé.
                         </p>
                         <p>Je vous garantis un <strong>espace de parole confidentiel</strong>, libre de tout jugement et
-                            bienveillant, afin de vous permettre d'exprimer vos émotions et vos pensées librement.</p>
+                            bienveillant, afin de vous permettre d'exprimer vos émotions et vos pensées librement.
+                        </p>
                     </div>
                     <div class="image-block">
                         <img src="images/salle-attente.jpg"
