Optimiser le code CSS et HTML en supprimant les espaces inutiles et en améliorant la lisibilité

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-
 <body>
 
     <header class="site-header">
@@ -50,15 +48,12 @@
                     <h2>Psychothérapie individuelle adolescents,<br>adultes et seniors.</h2>
                     <div class="icon-text">
                         <i class="fas fa-heart"></i>
-                        <p>Je vous accueille au <b>cabinet Physio-Grandet</b>, dans le centre d’Angers, pour un
-                            accompagnement psychothérapeutique adapté à vos besoins.</p>
+                        <p>Je vous accueille au <b>cabinet Physio-Grandet</b>, dans le centre d’Angers, pour un accompagnement psychothérapeutique adapté à vos besoins.</p>
                     </div>
-                    <p>Je propose également des RDV de soutien à domicile réservés aux seniors, aux personnes à mobilité
-                        réduite ou dans l'impossibilité de se déplacer (période pré et postnatale).</p>
+                    <p>Je propose également des RDV de soutien à domicile réservés aux seniors, aux personnes à mobilité réduite ou dans l'impossibilité de se déplacer (période pré et postnatale).</p>
                 </div>
                 <div class="image-content">
-                    <img src="images/entree-cabinet.jpg"
-                        alt="Photo du cabinet de psychologie">
+                    <img src="images/entree-cabinet.jpg" alt="Photo du cabinet de psychologie">
                 </div>
             </div>
         </section>
@@ -69,11 +64,11 @@
             <div class="contact-info">
                 <h3>Contact</h3>
                 <p><b>Anaïs Clochard Jagot</b><br>
-                    11 rue Grandet, 49100 Angers<br>
-                    07.45.70.85.00<br>
-                    anais.c.jagot@gmail.com</p>
+                11 rue Grandet, 49100 Angers<br>
+                07.45.70.85.00<br>
+                anais.c.jagot@gmail.com</p>
                 <p>n° RPPS : 10009466972<br>
-                    n° adeli : 499315505</p>
+                n° adeli : 499315505</p>
             </div>
             <div class="legal-links">
                 <a href="#">Politique de confidentialité</a>
@@ -85,5 +80,4 @@
 
     <script src="js/script.js"></script>
 </body>
-
 </html>
