Améliorer la lisibilité du code HTML et CSS en réorganisant les balises et en supprimant les espaces inutiles

--- a/accompagnements.html
+++ b/accompagnements.html
@@ -27,11 +27,14 @@
                             <li><a href="accompagnements.html" class="active-link">Accompagnements</a></li>
                             <li><a href="qui-suis-je.html">Qui suis-je ?</a></li>
                             <li><a href="pratique.html">Pratique</a></li>
-                            <li class="btn-rdv-mobile"><a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot">Prendre RDV</a></li>
+                            <li class="btn-rdv-mobile"><a
+                                    href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot">Prendre
+                                    RDV</a></li>
                         </ul>
                     </div>
                 </nav>
-                <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot" class="btn-rdv">Prendre RDV</a>
+                <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot" class="btn-rdv">Prendre
+                    RDV</a>
             </div>
         </div>
     </header>
@@ -89,8 +92,7 @@
                         </p>
                     </div>
                     <div class="image-block">
-                        <img src="images/salle-attente.jpg"
-                            alt="Photo d'une séance de psychothérapie">
+                        <img src="images/salle-attente.jpg" alt="Photo d'une séance de psychothérapie">
                     </div>
                 </div>
 
@@ -101,16 +103,17 @@
                         <p>Nous travaillons à partir des <strong>symptômes</strong> et des <strong>situations
                                 bloquantes</strong> qui vous empêchent d'avancer. L’idée est de comprendre les
                             <strong>mécanismes</strong> qui vous ont conduit à cet état de souffrance, et de s’en
-                            libérer.</p>
+                            libérer.
+                        </p>
                         <p>Cette approche permet de <strong>mieux comprendre</strong> vos émotions et vos réactions, et
                             d'apprendre à les gérer au quotidien. L'objectif est de retrouver un
                             <strong>équilibre</strong> et de vous sentir plus apaisé. Je vous propose un <strong>suivi
                                 personnalisé</strong> pour vous accompagner dans votre cheminement, à votre propre
-                            rythme, dans le respect et la bienveillance.</p>
+                            rythme, dans le respect et la bienveillance.
+                        </p>
                     </div>
                     <div class="image-block">
-                        <img src="images/salle-attente 3 .jpg"
-                            alt="Photo illustrant l'approche">
+                        <img src="images/salle-attente 3 .jpg" alt="Photo illustrant l'approche">
                     </div>
                 </div>
             </div>
