--- a/qui-suis-je.html
+++ b/qui-suis-je.html
@@ -27,11 +27,14 @@
                             <li><a href="accompagnements.html">Accompagnements</a></li>
                             <li><a href="qui-suis-je.html" class="active-link">Qui suis-je ?</a></li>
                             <li><a href="pratique.html">Pratique</a></li>
-                            <li class="btn-rdv-mobile"><a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot">Prendre RDV</a></li>
+                            <li class="btn-rdv-mobile"><a
+                                    href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot">Prendre
+                                    RDV</a></li>
                         </ul>
                     </div>
                 </nav>
-                <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot" class="btn-rdv">Prendre RDV</a>
+                <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot" class="btn-rdv">Prendre
+                    RDV</a>
             </div>
         </div>
     </header>
@@ -47,7 +50,8 @@
                         différentes périodes de vie.</p>
                     <p>Diplômée du <strong>Master 2 de Psychologie clinique</strong> de l’université d’Angers puis
                         <strong>spécialisée en psychopathologie et psychologie clinique du Traumatisme</strong>,
-                        j’exerce désormais au sein du cabinet Physio-Grandet.</p>
+                        j’exerce désormais au sein du cabinet Physio-Grandet.
+                    </p>
                     <p>J’accueille les adolescents à partir de 11 ans, ayant de l’expérience en <strong>psychiatrie
                             adolescente</strong>. J’ai effectué un travail de recherche sur le refus scolaire anxieux.
                         Je reçois également les étudiants, les adultes et les seniors, public de ma <strong>pratique
