--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body>
 
+<body>
     <header class="site-header">
         <div class="header-container">
             <div class="logo">
@@ -25,11 +26,14 @@
                             <li><a href="accompagnements.html">Accompagnements</a></li>
                             <li><a href="qui-suis-je.html">Qui suis-je ?</a></li>
                             <li><a href="pratique.html">Pratique</a></li>
-                            <li class="btn-rdv-mobile"><a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot">Prendre RDV</a></li>
+                            <li class="btn-rdv-mobile"><a
+                                    href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot">Prendre
+                                    RDV</a></li>
                         </ul>
                     </div>
                 </nav>
-                <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot" class="btn-rdv">Prendre RDV</a>
+                <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot" class="btn-rdv">Prendre
+                    RDV</a>
             </div>
         </div>
     </header>
@@ -48,9 +52,11 @@
                     <h2>Psychothérapie individuelle adolescents,<br>adultes et seniors.</h2>
                     <div class="icon-text">
                         <i class="fas fa-heart"></i>
-                        <p>Je vous accueille au <b>cabinet Physio-Grandet</b>, dans le centre d’Angers, pour un accompagnement psychothérapeutique adapté à vos besoins.</p>
+                        <p>Je vous accueille au <b>cabinet Physio-Grandet</b>, dans le centre d’Angers, pour un
+                            accompagnement psychothérapeutique adapté à vos besoins.</p>
                     </div>
-                    <p>Je propose également des RDV de soutien à domicile réservés aux seniors, aux personnes à mobilité réduite ou dans l'impossibilité de se déplacer (période pré et postnatale).</p>
+                    <p>Je propose également des RDV de soutien à domicile réservés aux seniors, aux personnes à mobilité
+                        réduite ou dans l'impossibilité de se déplacer (période pré et postnatale).</p>
                 </div>
                 <div class="image-content">
                     <img src="images/entree-cabinet.jpg" alt="Photo du cabinet de psychologie">
@@ -64,11 +70,11 @@
             <div class="contact-info">
                 <h3>Contact</h3>
                 <p><b>Anaïs Clochard Jagot</b><br>
-                11 rue Grandet, 49100 Angers<br>
-                07.45.70.85.00<br>
-                anais.c.jagot@gmail.com</p>
+                    11 rue Grandet, 49100 Angers<br>
+                    07.45.70.85.00<br>
+                    anais.c.jagot@gmail.com</p>
                 <p>n° RPPS : 10009466972<br>
-                n° adeli : 499315505</p>
+                    n° adeli : 499315505</p>
             </div>
             <div class="legal-links">
                 <a href="#">Politique de confidentialité</a>
@@ -80,4 +86,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
