--- a/pratique.html
+++ b/pratique.html
@@ -27,11 +27,14 @@
                             <li><a href="accompagnements.html">Accompagnements</a></li>
                             <li><a href="qui-suis-je.html">Qui suis-je ?</a></li>
                             <li><a href="pratique.html" class="active-link">Pratique</a></li>
-                            <li class="btn-rdv-mobile"><a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot">Prendre RDV</a></li>
+                            <li class="btn-rdv-mobile"><a
+                                    href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot">Prendre
+                                    RDV</a></li>
                         </ul>
                     </div>
                 </nav>
-                <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot" class="btn-rdv">Prendre RDV</a>
+                <a href="https://www.doctolib.fr/psychologue/angers/anais-clochard-jagot" class="btn-rdv">Prendre
+                    RDV</a>
             </div>
         </div>
     </header>
@@ -42,8 +45,7 @@
                 <div class="map-and-prices">
                     <div class="map-section">
                         <h2>Accès au cabinet</h2>
-                        <img src="images/map-parkings.jpg"
-                            alt="Carte de localisation du cabinet">
+                        <img src="images/map-parkings.jpg" alt="Carte de localisation du cabinet">
                         <h3>Transports en commun :</h3>
                         <ul>
                             <li><i class="fas fa-bus"></i> Tramway - Foch Maison Bleue (A et C) et Hôtel de ville
@@ -76,8 +78,7 @@
                         <p>Étage avec ascenseur, accès PMR</p>
                     </div>
                     <div class="building-photo">
-                        <img src="images/rue-grandet.jpg"
-                            alt="Photo du bâtiment du cabinet">
+                        <img src="images/rue-grandet.jpg" alt="Photo du bâtiment du cabinet">
                     </div>
                 </div>
             </div>
