Modifier les couleurs de fond et de texte, ajuster la taille du logo, et améliorer l'alignement du texte dans plusieurs sections pour une meilleure lisibilité.

--- a/accompagnements.html
+++ b/accompagnements.html
@@ -42,30 +42,40 @@
     <main>
         <section class="accompagnements-section">
             <div class="section-container">
-                <h1 class="page-title">Mes Accompagnements</h1>
+                <h1 class="page-title">Accompagnements</h1>
+                <div style="text-align: center; max-width: 800px; margin: 0 auto;">
+                    <p><b>Spécialisée en psychologie du traumatisme</b>, j'accueille une patientèle variée pour des
+                        consultations individuelles avec un espace de parole sécure et confidentiel :<br /><br />
+                        <b>~ Adolescents (dès 11 ans) - Étudiants - Adultes - Seniors ~</b>
+                    </p>
+                </div>
 
                 <div class="content-image-layout">
                     <div class="text-block">
                         <h2>Pourquoi venir en consultation ?</h2>
                         <p>De nombreuses raisons peuvent amener à s’engager dans un suivi ponctuel ou dans une
                             psychothérapie.</p>
-                        <p>Il n'y a pas de « mal de matière » qui justifierait une consultation. Une séance offre un
-                            espace de parole, de déchargement, sans aucun jugement, dans un climat de confiance et de
-                            bienveillance.</p>
-                        <p>Je vous propose un accompagnement psychothérapeutique adapté à vos besoins et à vos demandes,
-                            notamment en lien avec des <strong>problématiques</strong> telles que :</p>
+                        <p>Il n'y a <b>pas de « seuil de mal-être »</b> qui justifierait une consultation. Une séance
+                            offre un <b>espace où venir déposer librement</b>, tout ce qui peut nous traverser à un
+                            moment de notre parcours.</p>
+                        <p>Ma formation et mes expériences professionelles me permettent de vous accompagner <b>plus
+                                spécifiquement</b> autour des <b>problématiques en lien avec un évenement
+                                dit « psychotraumatique »</b> récent ou ancien:</p>
                         <ul>
-                            <li>Difficultés à surmonter un deuil ou un traumatisme.</li>
-                            <li>Troubles anxieux, états de stress et de panique.</li>
-                            <li>Sentiment de la vie sans substance, perte de sens.</li>
-                            <li>Difficultés à gérer des émotions comme la tristesse ou la colère.</li>
-                            <li>Problèmes d'estime de soi ou de confiance en soi.</li>
-                            <li>Souffrance au travail ou professionnelle.</li>
-                            <li>Burn-out, fatigue chronique.</li>
-                            <li>Troubles alimentaires.</li>
-                            <li>Phobies.</li>
-                            <li>Problèmes relationnels.</li>
-                            <li>Troubles du comportement.</li>
+                            <li>Deuil dit « complexe » (lorsqu'un vécu traumatique fait obstacle au processus naturel de
+                                deuil)</li>
+                            <li>Accident de la vie ou maladie (pour vous ou pour un proche)</li>
+                            <li>Violences psychologiques, physiques et/ou sexuelles</li>
+                        </ul>
+                        <p>Je vous accompagne <b>également pour d'autres situations </b>:</p>
+                        <ul>
+                            <li>Stress, angoisses</li>
+                            <li>Mal-être persistant, dépression</li>
+                            <li>Troubles alimentaires</li>
+                            <li>Addictions</li>
+                            <li>« phobie scolaire »</li>
+                            <li>Soutien à la parentalité</li>
+                            <li>Difficultés relationnelles</li>
                         </ul>
                     </div>
                     <div class="image-block">
@@ -73,44 +83,61 @@
                     </div>
                 </div>
 
-                <div class="content-image-layout reverse">
+                <div class="content-image-layout">
+                    <div class="image-block img-mobile">
+                        <img src="images/salle-attente.jpg" alt="Photo d'une séance de psychothérapie">
+                    </div>
                     <div class="text-block">
                         <h2>Comment se déroule une séance ?</h2>
-                        <p>Lors de la <strong>première séance</strong>, nous prenons le temps de faire connaissance et
-                            d'évaluer vos <strong>besoins spécifiques</strong>.</p>
-                        <p>Ensuite, nous revenons sur des événements importants pour mieux les comprendre et les mettre
-                            en perspective dans le cadre de votre <strong>parcours de vie</strong>.</p>
-                        <p>L’objectif de la séance est de vous aider à vous sentir mieux et à reprendre le contrôle de
-                            votre vie. Je vous propose un accompagnement <strong>UNIQUE ET ADAPTÉ</strong>, basé sur
-                            l'analyse de vos besoins pour vous aider à atteindre vos objectifs.</p>
-                        <p>Lors des <strong>séances suivantes</strong>, nous aborderons les sujets qui vous préoccupent.
-                            Nous travaillons ensemble à débloquer les situations et à déconstruire les croyances
-                            limitantes. L’idée est de retrouver votre confiance en vous et de vous sentir plus apaisé.
+                        <p><i class="fas fa-bullseye"></i> Lors de la <strong>première séance</strong>, nous prenons le
+                            temps de faire connaissance et
+                            d'instaurer une <strong>relation de confiance</strong>.</p>
+                        <p>Ensemble, nous revenons sur des événements importants pour mieux définir le contexte dans
+                            lequel s'inscrit votre demande d'accompagnement.</p>
+                        <p>Vous décidez de vous engager ou non dans un travail à mes côtés. <b>L'accompagnement est
+                                UNIQUE et adapté</b>, pensé en fonction de vos besoins, de votre histoire.</p>
+                        <p><i class="fas fa-bullseye"></i> Lors des <strong>séances suivantes</strong>, un travail
+                            psychothérapeutique s'engage de
+                            sotre à aller vers un mieux-être au fil du temps.
                         </p>
-                        <p>Je vous garantis un <strong>espace de parole confidentiel</strong>, libre de tout jugement et
-                            bienveillant, afin de vous permettre d'exprimer vos émotions et vos pensées librement.
+                        <p class="quote" style="text-align:center; margin: 0 auto; font-size: 1.1em;">
+                            <i class="fas fa-quote-left"></i> <b><i>Je ne comprends pas ce que parler va pouvoir
+                                    m'apporter</i></b> <i class="fas fa-quote-right"></i>
                         </p>
-                    </div>
-                    <div class="image-block">
-                        <img src="images/salle-attente.jpg" alt="Photo d'une séance de psychothérapie">
+                        <p>La psychothérapie individuelle ne consiste pas à parler seul face à un.e psychologue qui
+                            écoute passivement. Il s'agit bien d'un <b>ECHANGE</b>.
+                        </p>
+                        <p>Au fil des séances, nous <b>repérons des mécanismes psychiques</b> qui se répètent, nous
+                            <b>mettons du sens sur votre vécu</b>. A votre rythme, vous deveniez plus « outillé.e » pour
+                            faire face aux problématiques de départ et à celles qui ont pu émerger au cours de la
+                            thérapie.
+                        </p>
+                        <p>Le nombre de RDV et leur fréquence varient selon les problématiques et sont régulièrement
+                            discutés et modifiés au cours du suivi afin de <b>respecter votre rythme</b>
+                        </p>
                     </div>
                 </div>
 
                 <div class="content-image-layout">
                     <div class="text-block">
                         <h2>Mon approche</h2>
-                        <p>Je travaille essentiellement à partir de l'<strong>approche psychodynamique</strong>.</p>
-                        <p>Nous travaillons à partir des <strong>symptômes</strong> et des <strong>situations
-                                bloquantes</strong> qui vous empêchent d'avancer. L’idée est de comprendre les
-                            <strong>mécanismes</strong> qui vous ont conduit à cet état de souffrance, et de s’en
-                            libérer.
+                        <p>Je travaille essentiellement à partir de <strong>l'approche psychodynamique</strong>.</p>
+                        <p>Nous travaillons <strong>A PARTIR des « symptômes », des sensations corporelles, des
+                                croyances,
+                                des comportements PRESENT.E.S</strong> mais non SUR ceux/celles-ci. Il s'agit de
+                            <b>comprendre
+                                peu à peu ce que cela vient toucher, rejouer ou reveiller.</b>
                         </p>
-                        <p>Cette approche permet de <strong>mieux comprendre</strong> vos émotions et vos réactions, et
-                            d'apprendre à les gérer au quotidien. L'objectif est de retrouver un
-                            <strong>équilibre</strong> et de vous sentir plus apaisé. Je vous propose un <strong>suivi
-                                personnalisé</strong> pour vous accompagner dans votre cheminement, à votre propre
-                            rythme, dans le respect et la bienveillance.
+                        <p>Chaque personne est <b>UNIQUE et un même vécu s'exprime toujours différement</b> selon
+                            l'histoire et l'environnement de chacun.
                         </p>
+                        <p>
+                            C'est pourquoi nous cherchons à <b>mettre du sens sur les symptômes ou les problématiques
+                                actuelles à la lumière de l'histoire de vie</b> sans aller « fouiller dans le passé » à
+                            tout prix.
+                        </p>
+                        <p>Lorsque la mise en mots est compliquée, j'utilise des <b>outils de médiation</b> adaptés à
+                            l'âge et à la problématique de chacun.</p>
                     </div>
                     <div class="image-block">
                         <img src="images/salle-attente 3 .jpg" alt="Photo illustrant l'approche">
