Modifier les styles CSS pour améliorer la mise en page et la lisibilité, ajouter des titres de section, et ajuster les dimensions des images.

--- a/pratique.html
+++ b/pratique.html
@@ -42,6 +42,7 @@
     <main>
         <section class="pratique-container">
             <div class="section-container">
+                <h1 class="page-title">Pratique</h1>
                 <div class="map-and-prices">
                     <div class="map-section">
                         <h2>Accès au cabinet</h2>
