--- a/qui-suis-je.html
+++ b/qui-suis-je.html
@@ -40,29 +40,33 @@
     </header>
 
     <main>
-        <section class="about-section">
+        <section class="pratique-container">
             <div class="section-container">
-                <div class="about-image">
-                    <img src="images/portrait.jpg" alt="Anaïs Clochard Jagot">
-                </div>
-                <div class="about-text">
-                    <p>Je suis psychologue clinicienne et psychothérapeute ayant à cœur d’accompagner chacun.e à
-                        différentes périodes de vie.</p>
-                    <p>Diplômée du <strong>Master 2 de Psychologie clinique</strong> de l’université d’Angers puis
-                        <strong>spécialisée en psychopathologie et psychologie clinique du Traumatisme</strong>,
-                        j’exerce désormais au sein du cabinet Physio-Grandet.
-                    </p>
-                    <p>J’accueille les adolescents à partir de 11 ans, ayant de l’expérience en <strong>psychiatrie
-                            adolescente</strong>. J’ai effectué un travail de recherche sur le refus scolaire anxieux.
-                        Je reçois également les étudiants, les adultes et les seniors, public de ma <strong>pratique
-                            antérieure au sein d’une association de victimes de violences sexuelles.</strong></p>
-                    <ul>
-                        <li>Je vous reçois au cabinet en consultation individuelle pour un <strong>soutien
-                                ponctuel</strong> ou pour un accompagnement psychothérapeutique.</li>
-                        <li>Je consacre les mardis et mercredis matins aux <strong>séances de soutien à
-                                domicile</strong> pour les seniors, les personnes en situation de handicap, les
-                            personnes dans l’incapacité de se déplacer en période anté ou post-natale.</li>
-                    </ul>
+                <h1 class="page-title">Qui suis-je ?</h1>
+                <div class="map-and-prices">
+                    <div class="about-image">
+                        <img src="images/portrait.jpg" alt="Anaïs Clochard Jagot">
+                    </div>
+                    <div class="about-text">
+                        <p>Je suis psychologue clinicienne et psychothérapeute ayant à cœur d’accompagner chacun.e à
+                            différentes périodes de vie.</p>
+                        <p>Diplômée du <strong>Master 2 de Psychologie clinique</strong> de l’université d’Angers puis
+                            <strong>spécialisée en psychopathologie et psychologie clinique du Traumatisme</strong>,
+                            j’exerce désormais au sein du cabinet Physio-Grandet.
+                        </p>
+                        <p>J’accueille les adolescents à partir de 11 ans, ayant de l’expérience en <strong>psychiatrie
+                                adolescente</strong>. J’ai effectué un travail de recherche sur le refus scolaire
+                            anxieux.
+                            Je reçois également les étudiants, les adultes et les seniors, public de ma <strong>pratique
+                                antérieure au sein d’une association de victimes de violences sexuelles.</strong></p>
+                        <ul>
+                            <li>Je vous reçois au cabinet en consultation individuelle pour un <strong>soutien
+                                    ponctuel</strong> ou pour un accompagnement psychothérapeutique.</li>
+                            <li>Je consacre les mardis et mercredis matins aux <strong>séances de soutien à
+                                    domicile</strong> pour les seniors, les personnes en situation de handicap, les
+                                personnes dans l’incapacité de se déplacer en période anté ou post-natale.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
