Modifier la police de caractères, ajuster le rembourrage de la section de psychothérapie et supprimer la section héro pour améliorer la mise en page et la présentation des images.

--- a/index.html
+++ b/index.html
@@ -39,14 +39,10 @@
     </header>
 
     <main>
-        <section class="hero-section">
-            <div class="hero-content">
-                <h1>Anaïs Clochard Jagot</h1>
-                <p>Psychologue clinicienne Angers</p>
-            </div>
-        </section>
-
         <section class="psychotherapy-section">
+            <div class="image-content">
+                <img src="images/premiere-page.png" alt="Photo du cabinet de psychologie">
+            </div>
             <div class="section-container">
                 <div class="text-content">
                     <h2>Psychothérapie individuelle adolescents,<br>adultes et seniors.</h2>
