--- a/pratique.html
+++ b/pratique.html
@@ -19,7 +19,7 @@
             <div class="header-right">
                 <nav class="main-nav">
                     <button class="hamburger" aria-label="Ouvrir le menu de navigation">
-                        <i class="fas fa-bars"></i>
+                        <i class="fa fa-bars fa-lg"></i>
                     </button>
                     <div class="nav-links">
                         <ul>
